# The MIT License (MIT)
#
# Copyright (C) 2025 Fabrício Barros Cabral
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included
# in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
from abc import ABC, abstractmethod

from arana.html import Html, PlainHtml


class Response(ABC):
    @abstractmethod
    def status(self) -> int:
        pass

    @abstractmethod
    def html(self) -> Html:
        pass

    @abstractmethod
    def url(self) -> str:
        pass


class PwResponse(Response):
    def __init__(self, status: int, html: Html, url: str) -> None:
        self.__status = status
        self.__html = html
        self.__url = url

    def status(self) -> int:
        return self.__status

    def html(self) -> Html:
        return self.__html

    def url(self) -> str:
        return self.__url


class NotFoundResponse(Response):
    def __init__(self, url: str) -> None:
        self.__url = url

    def status(self) -> int:
        return 404

    def html(self) -> Html:
        return PlainHtml("<html><body><h1>Not Found</h1></body></html>")

    def url(self) -> str:
        return self.__url
